change directory css

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       href="https://assets.website-files.com/61af164800e38c4f53c60b4e/61af164800e38c10e6c60bac_RevoU%20centered.svg"
       rel="apple-touch-icon"
     />
-    <link href="../dist/output.css" rel="stylesheet" />
+    <link href="output.css" rel="stylesheet" />
   </head>
   <body onload="loadLibrary()">
     <div class="flex flex-col h-screen">
