fixing search result

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
 
           <div
             id="search-result"
-            class="bg-gray-800 p-8 rounded-lg my-6 opacity-0"
+            class="bg-gray-800 p-8 rounded-lg my-6 opacity-0 hidden"
           ></div>
         </div>
       </main>
